// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders ElectionInfoBar 1`] = `
<div>
  <div
    class="sc-ikJzcn bBqGvx"
  >
    <div
      class="sc-furvIG kojTgI"
    >
      <strong
        class="sc-jrQzUz jTxFnM"
      >
        General Election
      </strong>
       —
       
      <span
        class="sc-jrQzUz jTxFnM"
      >
        Tuesday, November 3, 2020
      </span>
      <div
        class="sc-pVTma fWDBLk"
      >
        <span
          class="sc-jrQzUz jTxFnM"
        >
          All Precincts
        </span>
         —
         
        <span
          class="sc-jrQzUz jTxFnM"
        >
          Franklin County
          ,
           
          State of Hamilton
        </span>
      </div>
    </div>
    <div
      class="sc-jJoQpE jwRrde"
    />
    <div
      class="sc-furvIG egrWng"
    >
      <div
        class="sc-pVTma fWDBLk"
      >
        Election ID
      </div>
      <strong>
        2f6b1553c7
      </strong>
    </div>
  </div>
</div>
`;

exports[`Renders admin ElectionInfoBar with precinct set 1`] = `
<div>
  <div
    class="sc-ikJzcn bBqGvx"
  >
    <div
      class="sc-furvIG kojTgI"
    >
      <strong
        class="sc-jrQzUz jTxFnM"
      >
        General Election
      </strong>
       —
       
      <span
        class="sc-jrQzUz jTxFnM"
      >
        Tuesday, November 3, 2020
      </span>
      <div
        class="sc-pVTma fWDBLk"
      >
        <span
          class="sc-jrQzUz jTxFnM"
        >
          Center Springfield
        </span>
         —
         
        <span
          class="sc-jrQzUz jTxFnM"
        >
          Franklin County
          ,
           
          State of Hamilton
        </span>
      </div>
    </div>
    <div
      class="sc-jJoQpE jwRrde"
    />
    <div
      class="sc-furvIG egrWng"
    >
      <div
        class="sc-pVTma fWDBLk"
      >
        Software Version
      </div>
      <strong>
        DEV
      </strong>
    </div>
    <div
      class="sc-furvIG egrWng"
    >
      <div
        class="sc-pVTma fWDBLk"
      >
        Machine ID
      </div>
      <strong>
        0002
      </strong>
    </div>
    <div
      class="sc-furvIG egrWng"
    >
      <div
        class="sc-pVTma fWDBLk"
      >
        Election ID
      </div>
      <strong>
        2f6b1553c7
      </strong>
    </div>
  </div>
</div>
`;
